src/main/gov/nasa/jpf/abstraction/predicate/grammar/PredicatesParser.java
// Generated from src/main/gov/nasa/jpf/abstraction/predicate/grammar/Predicates.g4 by ANTLR 4.0
package gov.nasa.jpf.abstraction.predicate.parser;

	import gov.nasa.jpf.abstraction.predicate.grammar.*;
	import gov.nasa.jpf.abstraction.predicate.grammar.impl.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PredicatesParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__20=1, T__19=2, T__18=3, T__17=4, T__16=5, T__15=6, T__14=7, T__13=8, 
		T__12=9, T__11=10, T__10=11, T__9=12, T__8=13, T__7=14, T__6=15, T__5=16, 
		T__4=17, T__3=18, T__2=19, T__1=20, T__0=21, CONSTANT=22, ID=23, WS=24;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "')'", "'.'", "','", "'+'", "'['", "'-'", "'*'", "'('", 
		"'not'", "'<'", "'='", "'false'", "'object'", "'method'", "'/'", "'aread'", 
		"'true'", "'static'", "'fread'", "'arr'", "CONSTANT", "ID", "WS"
	};
	public static final int
		RULE_predicates = 0, RULE_contextlist = 1, RULE_context = 2, RULE_predicatelist = 3, 
		RULE_predicate = 4, RULE_expression = 5, RULE_term = 6, RULE_factor = 7, 
		RULE_contextpath = 8, RULE_path = 9;
	public static final String[] ruleNames = {
		"predicates", "contextlist", "context", "predicatelist", "predicate", 
		"expression", "term", "factor", "contextpath", "path"
	};

	@Override
	public String getGrammarFileName() { return "Predicates.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public PredicatesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PredicatesContext extends ParserRuleContext {
		public Predicates val;
		public ContextlistContext cs;
		public ContextlistContext contextlist() {
			return getRuleContext(ContextlistContext.class,0);
		}
		public PredicatesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicates; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).enterPredicates(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).exitPredicates(this);
		}
	}

	public final PredicatesContext predicates() throws RecognitionException {
		PredicatesContext _localctx = new PredicatesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_predicates);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20); ((PredicatesContext)_localctx).cs = contextlist(0);

					((PredicatesContext)_localctx).val =  new Predicates(((PredicatesContext)_localctx).cs.val);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContextlistContext extends ParserRuleContext {
		public int _p;
		public List<Context> val;
		public ContextlistContext cs;
		public ContextContext c;
		public ContextlistContext contextlist() {
			return getRuleContext(ContextlistContext.class,0);
		}
		public ContextContext context() {
			return getRuleContext(ContextContext.class,0);
		}
		public ContextlistContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ContextlistContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_contextlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).enterContextlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).exitContextlist(this);
		}
	}

	public final ContextlistContext contextlist(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ContextlistContext _localctx = new ContextlistContext(_ctx, _parentState, _p);
		ContextlistContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, RULE_contextlist);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{

					((ContextlistContext)_localctx).val =  new ArrayList<Context>();
				
			}
			_ctx.stop = _input.LT(-1);
			setState(32);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ContextlistContext(_parentctx, _parentState, _p);
					_localctx.cs = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_contextlist);
					setState(26);
					if (!(1 >= _localctx._p)) throw new FailedPredicateException(this, "1 >= $_p");
					setState(27); ((ContextlistContext)_localctx).c = context();

					          		((ContextlistContext)_localctx).val =  ((ContextlistContext)_localctx).cs.val;
					          		_localctx.val.add(((ContextlistContext)_localctx).c.val);
					          	
					}
					} 
				}
				setState(34);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ContextContext extends ParserRuleContext {
		public Context val;
		public PredicatelistContext ps;
		public ContextpathContext c;
		public PredicatelistContext predicatelist() {
			return getRuleContext(PredicatelistContext.class,0);
		}
		public ContextpathContext contextpath() {
			return getRuleContext(ContextpathContext.class,0);
		}
		public ContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_context; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).enterContext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).exitContext(this);
		}
	}

	public final ContextContext context() throws RecognitionException {
		ContextContext _localctx = new ContextContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_context);
		try {
			setState(55);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(35); match(6);
				setState(36); match(19);
				setState(37); match(1);
				setState(38); ((ContextContext)_localctx).ps = predicatelist(0);

						((ContextContext)_localctx).val =  new StaticContext(((ContextContext)_localctx).ps.val);
					
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41); match(6);
				setState(42); match(14);
				setState(43); ((ContextContext)_localctx).c = contextpath(0);
				setState(44); match(1);
				setState(45); ((ContextContext)_localctx).ps = predicatelist(0);

						((ContextContext)_localctx).val =  new ObjectContext(((ContextContext)_localctx).c.val, ((ContextContext)_localctx).ps.val);
					
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(48); match(6);
				setState(49); match(15);
				setState(50); ((ContextContext)_localctx).c = contextpath(0);
				setState(51); match(1);
				setState(52); ((ContextContext)_localctx).ps = predicatelist(0);

						((ContextContext)_localctx).val =  new MethodContext(((ContextContext)_localctx).c.val, ((ContextContext)_localctx).ps.val);
					
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicatelistContext extends ParserRuleContext {
		public int _p;
		public List<Predicate> val;
		public PredicatelistContext ps;
		public PredicateContext p;
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public PredicatelistContext predicatelist() {
			return getRuleContext(PredicatelistContext.class,0);
		}
		public PredicatelistContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public PredicatelistContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_predicatelist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).enterPredicatelist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).exitPredicatelist(this);
		}
	}

	public final PredicatelistContext predicatelist(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PredicatelistContext _localctx = new PredicatelistContext(_ctx, _parentState, _p);
		PredicatelistContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, RULE_predicatelist);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{

					((PredicatelistContext)_localctx).val =  new ArrayList<Predicate>();
				
			}
			_ctx.stop = _input.LT(-1);
			setState(66);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new PredicatelistContext(_parentctx, _parentState, _p);
					_localctx.ps = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_predicatelist);
					setState(60);
					if (!(1 >= _localctx._p)) throw new FailedPredicateException(this, "1 >= $_p");
					setState(61); ((PredicatelistContext)_localctx).p = predicate();

					          		((PredicatelistContext)_localctx).val =  ((PredicatelistContext)_localctx).ps.val;
					          		_localctx.val.add(((PredicatelistContext)_localctx).p.val);
					          	
					}
					} 
				}
				setState(68);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public Predicate val;
		public PredicateContext p;
		public ExpressionContext a;
		public ExpressionContext b;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).enterPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).exitPredicate(this);
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_predicate);
		try {
			setState(89);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69); match(18);

						((PredicateContext)_localctx).val =  new Equals(new Constant(1), new Constant(1));
					
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71); match(13);

						((PredicateContext)_localctx).val =  new Equals(new Constant(0), new Constant(1));
					
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73); match(10);
				setState(74); match(9);
				setState(75); ((PredicateContext)_localctx).p = predicate();
				setState(76); match(2);

						((PredicateContext)_localctx).val =  new Negation(((PredicateContext)_localctx).p.val);
					
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(79); ((PredicateContext)_localctx).a = expression();
				setState(80); match(12);
				setState(81); ((PredicateContext)_localctx).b = expression();

						((PredicateContext)_localctx).val =  new Equals(((PredicateContext)_localctx).a.val, ((PredicateContext)_localctx).b.val);
					
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(84); ((PredicateContext)_localctx).a = expression();
				setState(85); match(11);
				setState(86); ((PredicateContext)_localctx).b = expression();

						((PredicateContext)_localctx).val =  new LessThan(((PredicateContext)_localctx).a.val, ((PredicateContext)_localctx).b.val);
					
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Expression val;
		public TermContext t;
		public TermContext a;
		public TermContext b;
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expression);
		try {
			setState(104);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91); ((ExpressionContext)_localctx).t = term();

						((ExpressionContext)_localctx).val =  ((ExpressionContext)_localctx).t.val;
					
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94); ((ExpressionContext)_localctx).a = term();
				setState(95); match(5);
				setState(96); ((ExpressionContext)_localctx).b = term();

						((ExpressionContext)_localctx).val =  new Add(((ExpressionContext)_localctx).a.val, ((ExpressionContext)_localctx).b.val);
					
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(99); ((ExpressionContext)_localctx).a = term();
				setState(100); match(7);
				setState(101); ((ExpressionContext)_localctx).b = term();

						((ExpressionContext)_localctx).val =  new Subtract(((ExpressionContext)_localctx).a.val, ((ExpressionContext)_localctx).b.val);
					
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public Expression val;
		public FactorContext f;
		public FactorContext a;
		public FactorContext b;
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_term);
		try {
			setState(119);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106); ((TermContext)_localctx).f = factor();

						((TermContext)_localctx).val =  ((TermContext)_localctx).f.val;
					
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109); ((TermContext)_localctx).a = factor();
				setState(110); match(8);
				setState(111); ((TermContext)_localctx).b = factor();

						((TermContext)_localctx).val =  new Multiply(_localctx.a.val, _localctx.b.val);
					
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(114); ((TermContext)_localctx).a = factor();
				setState(115); match(16);
				setState(116); ((TermContext)_localctx).b = factor();

						((TermContext)_localctx).val =  new Divide(_localctx.a.val, _localctx.b.val);
					
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public Expression val;
		public Token CONSTANT;
		public PathContext p;
		public ExpressionContext e;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode CONSTANT() { return getToken(PredicatesParser.CONSTANT, 0); }
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).enterFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).exitFactor(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_factor);
		try {
			setState(131);
			switch (_input.LA(1)) {
			case CONSTANT:
				enterOuterAlt(_localctx, 1);
				{
				setState(121); ((FactorContext)_localctx).CONSTANT = match(CONSTANT);

						((FactorContext)_localctx).val =  new Constant(Integer.parseInt((((FactorContext)_localctx).CONSTANT!=null?((FactorContext)_localctx).CONSTANT.getText():null)));
					
				}
				break;
			case 17:
			case 20:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(123); ((FactorContext)_localctx).p = path(0);

						((FactorContext)_localctx).val =  ((FactorContext)_localctx).p.val;
					
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 3);
				{
				setState(126); match(9);
				setState(127); ((FactorContext)_localctx).e = expression();
				setState(128); match(2);

						((FactorContext)_localctx).val =  ((FactorContext)_localctx).e.val;
					
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContextpathContext extends ParserRuleContext {
		public int _p;
		public AccessPath val;
		public ContextpathContext p;
		public Token f;
		public TerminalNode ID() { return getToken(PredicatesParser.ID, 0); }
		public ContextpathContext contextpath() {
			return getRuleContext(ContextpathContext.class,0);
		}
		public ContextpathContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ContextpathContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_contextpath; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).enterContextpath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).exitContextpath(this);
		}
	}

	public final ContextpathContext contextpath(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ContextpathContext _localctx = new ContextpathContext(_ctx, _parentState, _p);
		ContextpathContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, RULE_contextpath);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(134); ((ContextpathContext)_localctx).f = match(ID);

					((ContextpathContext)_localctx).val =  new AccessPath((((ContextpathContext)_localctx).f!=null?((ContextpathContext)_localctx).f.getText():null));
				
			}
			_ctx.stop = _input.LT(-1);
			setState(143);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ContextpathContext(_parentctx, _parentState, _p);
					_localctx.p = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_contextpath);
					setState(137);
					if (!(1 >= _localctx._p)) throw new FailedPredicateException(this, "1 >= $_p");
					setState(138); match(3);
					setState(139); ((ContextpathContext)_localctx).f = match(ID);

					          		((ContextpathContext)_localctx).val =  ((ContextpathContext)_localctx).p.val;
					          		_localctx.val.appendSubElement((((ContextpathContext)_localctx).f!=null?((ContextpathContext)_localctx).f.getText():null));
					          	
					}
					} 
				}
				setState(145);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PathContext extends ParserRuleContext {
		public int _p;
		public AccessPath val;
		public PathContext p;
		public Token f;
		public ExpressionContext e;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public TerminalNode ID() { return getToken(PredicatesParser.ID, 0); }
		public PathContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public PathContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).enterPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredicatesListener ) ((PredicatesListener)listener).exitPath(this);
		}
	}

	public final PathContext path(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PathContext _localctx = new PathContext(_ctx, _parentState, _p);
		PathContext _prevctx = _localctx;
		int _startState = 18;
		enterRecursionRule(_localctx, RULE_path);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(147); ((PathContext)_localctx).f = match(ID);

						((PathContext)_localctx).val =  new AccessPath((((PathContext)_localctx).f!=null?((PathContext)_localctx).f.getText():null));
					
				}
				break;
			case 20:
				{
				setState(149); match(20);
				setState(150); match(9);
				setState(151); ((PathContext)_localctx).f = match(ID);
				setState(152); match(4);
				setState(153); ((PathContext)_localctx).p = path(0);
				setState(154); match(2);

						((PathContext)_localctx).val =  ((PathContext)_localctx).p.val;
						_localctx.val.appendSubElement((((PathContext)_localctx).f!=null?((PathContext)_localctx).f.getText():null));
					
				}
				break;
			case 17:
				{
				setState(157); match(17);
				setState(158); match(9);
				setState(159); match(21);
				setState(160); match(4);
				setState(161); ((PathContext)_localctx).p = path(0);
				setState(162); match(4);
				setState(163); ((PathContext)_localctx).e = expression();
				setState(164); match(2);

						((PathContext)_localctx).val =  ((PathContext)_localctx).p.val;
						_localctx.val.appendIndexElement(((PathContext)_localctx).e.val);
					
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(181);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(179);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new PathContext(_parentctx, _parentState, _p);
						_localctx.p = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_path);
						setState(169);
						if (!(4 >= _localctx._p)) throw new FailedPredicateException(this, "4 >= $_p");
						setState(170); match(3);
						setState(171); ((PathContext)_localctx).f = match(ID);

						          		((PathContext)_localctx).val =  ((PathContext)_localctx).p.val;
						          		_localctx.val.appendSubElement((((PathContext)_localctx).f!=null?((PathContext)_localctx).f.getText():null));
						          	
						}
						break;

					case 2:
						{
						_localctx = new PathContext(_parentctx, _parentState, _p);
						_localctx.p = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_path);
						setState(173);
						if (!(3 >= _localctx._p)) throw new FailedPredicateException(this, "3 >= $_p");
						setState(174); match(6);
						setState(175); ((PathContext)_localctx).e = expression();
						setState(176); match(1);

						          		((PathContext)_localctx).val =  ((PathContext)_localctx).p.val;
						          		_localctx.val.appendIndexElement(((PathContext)_localctx).e.val);
						          	
						}
						break;
					}
					} 
				}
				setState(183);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 1: return contextlist_sempred((ContextlistContext)_localctx, predIndex);

		case 3: return predicatelist_sempred((PredicatelistContext)_localctx, predIndex);

		case 8: return contextpath_sempred((ContextpathContext)_localctx, predIndex);

		case 9: return path_sempred((PathContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean predicatelist_sempred(PredicatelistContext _localctx, int predIndex) {
		switch (predIndex) {
		case 1: return 1 >= _localctx._p;
		}
		return true;
	}
	private boolean contextlist_sempred(ContextlistContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return 1 >= _localctx._p;
		}
		return true;
	}
	private boolean path_sempred(PathContext _localctx, int predIndex) {
		switch (predIndex) {
		case 3: return 4 >= _localctx._p;

		case 4: return 3 >= _localctx._p;
		}
		return true;
	}
	private boolean contextpath_sempred(ContextpathContext _localctx, int predIndex) {
		switch (predIndex) {
		case 2: return 1 >= _localctx._p;
		}
		return true;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
	}
}